fix the foto file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-![контрольная работа по основному блоку.png](контрольная работа по основному блоку.png)
+контрольная работа по основному блоку.png 
+контрольная работа по основному блоку1.drawio
